--- a/sample/Resources/Info.rc
+++ b/sample/Resources/Info.rc
@@ -18,14 +18,14 @@ BEGIN
     BEGIN
         BLOCK "080404b0"
         BEGIN
-            VALUE "CompanyName", "Gezhi Studio"
+            VALUE "CompanyName", "Artiverse Studio"
             VALUE "FileDescription", ""
-            VALUE "FileVersion", "1.3.0.1"
+            VALUE "FileVersion", "2.0.0.1"
             VALUE "InternalName", "Chatbot.exe"
-            VALUE "LegalCopyright", "Copyright (C) 2025 Gezhi Studio"
+            VALUE "LegalCopyright", "Copyright (C) 2025 Artiverse Studio"
             VALUE "OriginalFilename", "Chatbot.exe"
             VALUE "ProductName", ""
-            VALUE "ProductVersion", "1.3.0.1"
+            VALUE "ProductVersion", "2.0.0.1"
         END
     END
     BLOCK "VarFileInfo"
